# YmmosBackend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build-docker.sh  docker-compose.yml  init_db.py  init_users_sqlite.py  main.py  pyproject.toml
.github/workflows/: docker-build-multiplatform.yml  docker-build.yml
app/: main.py
core/: __init__.py  auth_middleware.py  crypto.py  exception_handlers.py  exceptions.py  helpers.py  logger.py  settings.py
dao/: __init__.py  auth_log_dao.py  base.py  user_dao.py
db/: __init__.py  session.py
docs/: DOCKER_CICD.md
model/: __init__.py  auth_log.py  base.py  user.py
routes/: __init__.py  auth_route.py  user_route.py
schema/: __init__.py  auth.py  response.py  user.py
service/: __init__.py  auth_service.py  user_service.py
templates/: login.html
